<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        app:cardElevation="8dp"
        app:contentPadding="16dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Préstamos"
            android:layout_marginBottom="40dp"

            />



        <LinearLayout
            android:id="@+id/linear_layout_prestamos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                tools:ignore="RtlSymmetry">
                <ImageButton
                    android:id="@+id/boton_favoritos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/favorito_icono"
                    android:background="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favoritos"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"

                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/boton_encurso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/en_curso_icono"
                    android:background="@color/white"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/en_curso"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"

                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/boton_recogida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pendiente_recogida_icono"
                    android:background="@color/white"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/recogida"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/boton_devolver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pendiente_devolucion_icon"
                    android:background="@color/white"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/devolver"
                    />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>