<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".AccountActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"

        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:contentScrim="?attr/colorPrimary"
            app:toolbarId="@id/toolbar_mine"
            app:collapsedTitleGravity="left"
            android:fitsSystemWindows="true"
            app:expandedTitleGravity="center_horizontal"

            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/white"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circle_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/original"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="-1"
                />


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_mine"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="parallax"
                app:title=""/>





        </com.google.android.material.appbar.CollapsingToolbarLayout>



    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center_horizontal"
            app:cardElevation="8dp"
            app:contentPadding="16dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Préstamos"
                android:textSize="14sp"

                />


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:layout_gravity="center">


                <LinearLayout
                    android:id="@+id/linear_layout_prestamos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="20dp"
                    android:fitsSystemWindows="true"
                    android:gravity="center"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginEnd="20dp"
                        >
                        <ImageButton
                            android:id="@+id/boton_favoritos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/favorito_icono"
                            android:background="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/favoritos"
                            android:textSize="12sp"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical">
                        <ImageButton
                            android:id="@+id/boton_encurso"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/en_curso_icono"
                            android:background="@color/white"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/en_curso"
                            android:textSize="12sp"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"

                        android:orientation="vertical">
                        <ImageButton
                            android:id="@+id/boton_recogida"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/pendiente_recogida_icono"
                            android:background="@color/white"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/recogida"
                            android:textSize="12sp"
                            />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"

                        android:orientation="vertical">
                        <ImageButton
                            android:id="@+id/boton_devolver"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/pendiente_devolucion_icon"
                            android:background="@color/white"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/devolver"
                            android:textSize="12sp"
                            />
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardview_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center_horizontal"
                app:cardElevation="8dp"
                app:contentPadding="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mis datos"
                        android:textSize="16sp">


                    </TextView>

                    <ImageButton
                        android:id="@+id/edit_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/edit_icon"
                        android:background="@color/white"
                        android:scaleType="fitEnd"
                        />
                </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Nombre">

                            </TextView>

                            <TextView
                              android:id="@+id/nombre_text"

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Nombre"

                                >

                            </TextView>

                        </LinearLayout>

                </LinearLayout>





            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>



    </androidx.core.widget.NestedScrollView>







</androidx.coordinatorlayout.widget.CoordinatorLayout>









